feat:  Backend: Separation UserProfile / AIProfile
